List.of in DownloaderTestImpl